--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   page_view_dot_indicator: ^2.3.0
+  http: ^1.2.1
   
 
 dev_dependencies:
@@ -68,6 +69,7 @@ flutter:
     - assets/WhatsApp Image 2024-03-23 at 09.47.39 (2).jpeg
     - assets/WhatsApp Image 2024-03-23 at 09.47.40 (1) (1).jpeg
     - assets/WhatsApp Image 2024-03-23 at 09.47.40 (3).jpeg
+    - assets/Screenshot_2024-03-23_at_5.59.56_PM-removebg-preview.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
